--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">My App Portfolio</string>
+    <string name="title_string">My Nanodegree Apps!</string>
+    <string name="toast_build_it_bigger">This button will launch Build it bigger app</string>
+    <string name="toast_library">This button will launch Library app</string>
+    <string name="toast_capstone">This button will launch Capstone app</string>
+    <string name="toast_xyz_reader">This button will launch Xyz Reader app</string>
+    <string name="toast_scores">This button will launch Scores app</string>
+    <string name="toast_spotify_streamer">This button will launch Spotify Streamer app</string>
 </resources>
